--- a/sg/semana4/index.html
+++ b/sg/semana4/index.html
@@ -61,7 +61,7 @@
         var matrizVista = mat4.create();            
         var matrizModelado = mat4.create();  
         
-        var primitiva="esfera";
+        var primitiva="tubosenoidal";
         
 
         function initGL(canvas) {
