--- a/sg/semana4/index.html
+++ b/sg/semana4/index.html
@@ -242,7 +242,7 @@
             gui.add(window, "distanciaCamara",0.01,5).step(0.01);
             gui.add(window, "alturaCamara",-4,4).step(0.01);;
             gui.add(window, "modo",["wireframe","smooth","edges"]);
-            gui.add(window, "primitiva",["plano","esfera","tuboseniodal"]);
+            gui.add(window, "primitiva",["plano","esfera","tubosenoidal"]);
             gui.add(window, "velocidadAngular",0, 1).step(0.01);
         }
 
