--- a/sg/tp1/index.html
+++ b/sg/tp1/index.html
@@ -202,6 +202,24 @@
             }
         }
 
+        function Piso(ancho,largo){
+
+            this.getPosicion=function(u,v){
+                var x=(u-0.5)*ancho;
+                var y=(v-0.5)*largo;
+                return [x,y,0];
+            }
+
+            this.getNormal=function(u,v){
+                return [2,2,1];
+            }
+
+            // Cambia la posicion en la textura !!!!
+            this.getCoordenadasTextura=function(u,v){
+                return [u,v];
+            }
+        }
+
         function loadShaders(){
 
             $.when(loadVS(), loadFS()).done(function(res1,res2){
