camara grua y drone

--- a/sg/tp1/index.html
+++ b/sg/tp1/index.html
@@ -377,9 +377,9 @@
                     vec3.fromValues(
                         20,
                         0,
-                        33.5
+                        20-expandeGrua*2+13.5
                     ),
-                    vec3.fromValues(20+xgrua,ygrua,33.5),
+                    vec3.fromValues(20+xgrua,ygrua,20-expandeGrua*2+13.5),
                     vec3.fromValues(0,0,1)
                 );
             } else {
